<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mLayout"
    android:layout_width="match_parent"
    android:layout_height="444dp"
    android:background="@drawable/widget_background"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/main_view_padding" >

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginStart="8dp"
                    android:textSize="@dimen/widget_main_view_title_text_size"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal|center_vertical"
                    />

                <ImageView
                    android:id="@+id/img_update"
                    android:layout_width="@dimen/widget_main_view_reloading_size_width"
                    android:layout_height="@dimen/widget_main_view_reloading_size_height"
                    android:layout_marginStart="@dimen/widget_main_view_top_line_margin_top"
                    android:layout_gravity="center_vertical|end"
                    android:gravity=""
                    android:src="@drawable/update"/>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/gray_line"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/widget_main_view_textview_size_width"
                    android:layout_height="@dimen/widget_main_view_textview_size_height"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/today_date"
                    android:textColor="@color/white"
                    android:textSize="@dimen/widget_main_view_textview_size" />

                <TextView
                    android:id="@+id/widget_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="@dimen/widget_main_view_textview_size" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/gray_line"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/widget_main_view_textview_size_width"
                    android:layout_height="@dimen/widget_main_view_textview_size_height"
                    android:textColor="@color/white"
                    android:text="@string/today_time"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:textSize="@dimen/widget_main_view_textview_size"
                    />

                <TextView
                    android:id="@+id/widget_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text=""
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/widget_main_view_textview_size"
                    />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/gray_line"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/widget_main_view_textview_size_width"
                    android:layout_height="@dimen/widget_main_view_textview_size_height"
                    android:textColor="@color/white"
                    android:text="@string/today_temp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/widget_main_view_textview_size"
                    />

                <TextView
                    android:id="@+id/widget_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text=""
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textSize="@dimen/widget_main_view_textview_size" />
        </LinearLayout>
</LinearLayout>
